[package]
name = "rt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
swc_common = "0.37.5"
swc_ecma_ast = "0.118.2"
swc_ecma_parser = "0.149.1"

#swc_ecmascript = { version = "0.84.1", features = ["parser", "transforms", "module", "optimization", "react", "typescript", "utils", "visit", "codegen", "utils"] }
#swc_ecma_preset_env = "0.63.1"
#swc_common = { version = "0.14.3", features = ["tty-emitter", "sourcemap"] }
#swc_atoms = "0.2.9"
