[package]
name = "rt"
version = "6.1.1"
edition = "2018"

[profile.release]
# Smaller binaries https://github.com/johnthagen/min-sized-rust
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
anyhow = "1.0.89"
serde_json = "1.0"
swc_common = "0.37.5"
swc_ecma_ast = "0.118.2"
swc_ecma_parser = "0.149.1"
